<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Appointment">



    <!-- first Row-->

    <!-- Second Row-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="228dp">

        <TextView
            android:id="@+id/lblDateAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_date_appointment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtDateAppointment"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="25sp"
            android:text="@string/txt_date_appointments" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="452dp">

        <TextView
            android:id="@+id/lblClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_client"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="151dp">

        <TextView
            android:id="@+id/lblServiceAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_service_appointment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spnService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

    </LinearLayout>


    <EditText
        android:id="@+id/txtUserNameAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:focusable="true"
        android:paddingLeft="15sp"
        android:text="@string/txt_user_name_appointment"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="101dp">


        <TextView
            android:id="@+id/lblTimeAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_time_appointment"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="242dp" />

        <Spinner
            android:id="@+id/spnTime"
            android:layout_width="42dp"
            android:layout_height="26dp"
            android:spinnerMode="dropdown"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="240dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="531dp">

        <Button
            android:id="@+id/btnChangeDate"
            style="@style/smallButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_shape_small"
            android:onClick="btnChangeDateClicked"
            android:text="@string/btn_change_date_appointment" />

        <TextView
            android:id="@+id/lblDetailsAppointment"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="btnChangeDateClicked"
            android:text="@string/lbl_details_appointment"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="636dp">

        <Button
            android:id="@+id/btnCancelAppointments"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_shape"
            android:onClick="btnCancelAppointmentsClicked"
            android:text="Cancel" />

        <Button
            android:id="@+id/btnSubmitAppointment"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_weight="0.15"
            android:background="@drawable/button_shape"
            android:onClick="btnSubmitAppointmentClicked"
            android:text="@string/btn_submit_appointment" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>